//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes: 
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version
Date:
    Bugfixes:
        - Several fixes to the legacy summary page, including a regression in 0.8.1.
----------------------------------------------------------------------------------------------------------------------
Version 0.8.1
Date: August 8th 2024
    Bugfixes:
        - Refuse to accept negative numbers in several places where they don't make sense.
        - Handle electric energy interfaces better (e.g. pY's fish turbines, Nullius's wind turbines) when used to
          generate power.
    Internal changes:
        - Refactor a lot of the drawing code to increase both UI consistency and consistency in being able to pass
          options to methods that should accept them.
----------------------------------------------------------------------------------------------------------------------
Version 0.8.0
Date: August 3rd 2024
    Features:
        - Autofocus some search fields: when you open the pane to add a new recipe and when you view module templates
        - Provide hints that control+clicking can add recipes, or to explain how to change things so it can.
        - Add "Copy to Clipboard" button for data loading errors
    Bugfixes:
        - Fix regression in fluid variant selection when adding recipes.
        - "Extra products" will now show only the extra production of a requested product.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.5
Date: July 27th 2024
    Features:
        - Autofocus the project name field when you create a new project